# aoc-2021

./: .gitignore  Cargo.toml  build.rs
input/: 18.txt  22.txt  23.txt  24.txt
src/: lib.rs
