[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"
authors = ["Prefectly Cromulent <prefectly.cromulent@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec="0.22"
itertools = "0.10"
rustc-hash = "1.1.0"
dashmap = { version = "5", features = ["rayon"] }
rayon = "1.5"
